<resources>
    <string name="app_name">Online Food Delivery</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="Enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">SIGN IN</string>
    <string name="dont_have_account">Click to register new account</string>
    <string name="ragistor_to_your_account">Register to your account</string>
    <string name="Enter_name">Enter Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account. Click to Login</string>
    <string name="add_post">Add Post</string>
    <string name="Enter_title">Enter Title</string>
    <string name="Enter_discription">Enter Description</string>
    <string name="add_image">Add Image (Optional)</string>
    <string name="Enter_address">Enter Address</string>
    <string name="Enter_resturent_name">Enter restaurant name</string>
    <string name="add">Add Menu</string>
    <string name="add_dishes_to_your_menu">Add disshes to your menus</string>
    <string name="Enter_dish_title">Enter Dish Title</string>
    <string name="Enter_price">Enter Price</string>
    <string name="add_dishes">Add dishes</string>
    <string name="api_key">AIzaSyBQ5g78ZKzk0gpiGfwom7iQXpW5MuhMyP0</string>
    <string name="facebook_app_id">700123764192396</string>
    <string name="fb_login_protocol_scheme">fb700123764192396</string>
    <string name="app_secrte">07dd51ac26420c8b5d3c54604fd1fa99</string>

    <string-array name="category">
        <item>All</item>
        <item>Italian</item>
        <item>Chinese</item>
        <item>American</item>
        <item>Pizza</item>
        <item>Burgers</item>
        <item>Continental</item>
        <item>Pakistani</item>
        <item>Snacks</item>
        <item>others</item>
    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_catagory_list">CatagoryList</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="search_for_your_food">Search for your food</string>
    <string name="title_activity_detail">ScrollingActivity</string>
    <string name="home">Home</string>
    <string name="mycart">My Cart</string>
    <string name="profile">Profile</string>
    <string name="my_order">My Orders</string>
    <string name="update_your_profile">Update your profile</string>
    <string name="update">Update</string>
    <string name="provide_your_card_details">Provide your card details</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="mark_complete">Mark Complete</string>
    <string name="view_current_location">Dilivery on the way</string>
    <string name="history">History</string>
    <string name="resturent_name">Resturent name</string>
    <string name="enter_drop_off_location">Enter Drop off location</string>
    <string name="tap_to_enter_address">Enter address</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="new_order">New Order</string>
    <string name="you_have_a_new_order">You have a new order</string>
    <string name="login_with_socail_account">"Login with Social Accounts "</string>
    <string name="Enter_contact_number">Enter Contact Number</string>
    <string name="menus">View Menus</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="remove">Remove</string>
    <string name="favrouit">Favorite</string>



<!--    <string name="client_id">39013914513-l15ejrjcqf4dftej80ac9sqo8bktj1hl.apps.googleusercontent.com</string>-->
    <string name="client_id">39013914513-omacdb7hlg1np33af1p0gutgoodrt2gv.apps.googleusercontent.com</string>

    <string name="firebase_web">975332657414-of7qdg6q4csnk7jn5lelsdel0u0t4ts2.apps.googleusercontent.com</string>
    <string name="goole_api_key">AIzaSyAgVLL1WNj3NXwX5PvWsNpBb8-AYKeeorU</string>
    <string name="your_clint_secrate">zGPu0dY578tTM5E8oU_pAyUB</string>
    <string name="your_clint_id">39013914513-49kvg0gamcu0p0aaam47peosq6trimp5.apps.googleusercontent.com</string>
</resources>