<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/mycart" />

        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_baseline_fastfood_24"
            android:title="@string/my_order" />
    </group>
</menu>