<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    app:cardCornerRadius="@dimen/_10sdp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/_10sdp">
        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_drop_off_location"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:layout_margin="@dimen/_10sdp"
            android:textStyle="bold"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_5sdp">
            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:background="@null"
                android:hint="@string/tap_to_enter_address"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:inputType="textPersonName" />
        </androidx.cardview.widget.CardView>




        <Button
            android:id="@+id/current_location"
            android:layout_height="@dimen/_40sdp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_12sdp"
            android:background="@drawable/button_bg"
            android:layout_margin="@dimen/_10sdp"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/use_current_location"/>
    </LinearLayout>


</androidx.cardview.widget.CardView>