<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_your_profile"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12sdp"
        android:layout_margin="@dimen/_10sdp"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:id="@+id/profile_image"
                android:src="@drawable/img"
                android:layout_marginTop="@dimen/_5sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_margin="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_20sdp"
                app:cardElevation="@dimen/_10sdp"
                android:outlineSpotShadowColor="@color/colorPrimaryDark">
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/Enter_name"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/colorPrimary"
                    android:inputType="textPersonName" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_margin="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_20sdp"
                app:cardElevation="@dimen/_10sdp"
                android:outlineSpotShadowColor="@color/colorPrimaryDark">
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/Enter_email"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/colorPrimary"
                    android:inputType="textPersonName" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_margin="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_20sdp"
                app:cardElevation="@dimen/_10sdp"
                android:outlineSpotShadowColor="@color/colorPrimaryDark">
                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/Enter_address"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/colorPrimary"
                    android:inputType="textPersonName" />
            </androidx.cardview.widget.CardView>
            <RelativeLayout
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/button_bg"
                android:elevation="@dimen/_10sdp"
                android:outlineSpotShadowColor="@color/colorPrimaryDark">
                <TextView
                    android:id="@+id/login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
                <ProgressBar
                    android:theme="@style/ProgressBarStyle"
                    android:id="@+id/progress_bar"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>