<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    app:cardCornerRadius="@dimen/_10sdp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provide_your_card_details"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp"
            android:layout_margin="@dimen/_10sdp"
            android:textStyle="bold"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardElevation="@dimen/_10sdp"
            android:outlineSpotShadowColor="@color/colorPrimaryDark">
            <EditText
                android:id="@+id/person_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:background="@null"
                android:hint="@string/Enter_name"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/colorPrimary"
                android:inputType="textPersonName" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/phone_number_layput"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardElevation="@dimen/_10sdp"
            android:outlineSpotShadowColor="@color/colorPrimaryDark">
            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:background="@null"
                android:hint="@string/enter_phone_number"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/colorPrimary"
                android:inputType="phone" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:padding="@dimen/_8sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp"
            android:outlineSpotShadowColor="@color/colorPrimaryDark">
            <com.stripe.android.view.CardMultilineWidget
                android:id="@+id/cardInputWidget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </androidx.cardview.widget.CardView>



        <Button
            android:id="@+id/payButton"
            android:layout_height="@dimen/_40sdp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_12sdp"
            android:background="@drawable/button_bg"
            android:layout_below="@+id/cardInputWidget"
            android:layout_margin="@dimen/_10sdp"
            android:foreground="?attr/selectableItemBackground"
            android:text="Pay"/>
    </LinearLayout>


</androidx.cardview.widget.CardView>